src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginViewboxContent.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">

<Viewbox Height="250" Width="250">

	<Button Height="100" Width="100" Margin="-10,-10,10,10" />

</Viewbox>

</Grid>
